--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <article class="hero">        
-          <div class="hero__text-box">
+          <div class="herhttps://raw.githack.com/dragana1611/Badin-Home-Page/master/index.htmlo__text-box">
             <h1 class="hero__title">Full Cycle Design and Development</h1>
             <p class="hero__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
