--- a/index.html
+++ b/index.html
@@ -17,8 +17,56 @@
 <body>
   <!-- header -->
   <header class="header">
-    <div class="header__container">
-      <!-- <div class="hero__img-content">
+    <div class="header__container">      
+      <a href = "https://www.badinsoft.com/" class="header__logo">
+        <img src="./assets/images/1-asset-3.png" class="logo" />
+      </a>
+
+      <div class="navigation">
+        <a href = "#" class="navigation__button">
+          <span class="navigation__icon">&nbsp;</span>
+        </a>
+        <div class="navigation__background">&nbsp;</div>
+        <nav class="sidebar">
+          <ul class="side-nav">
+            <li class="side-nav__item side-nav__item--active">
+              <a href="#"> item1</a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#"> item2</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <article class="hero">
+        <div class="hero__text-box">
+          <h1 class="hero__title">It's all about PEOPLE</h1>
+          <p class="hero__text">
+            Whether you are an employee, a member of the community, a client, or a partner, we will take equal care of you.
+          </p>
+          <div class="hero__button-box">
+            <a href="#" class="link hero__link">
+              <div class="button button__header button__header--first">
+                <span> Get a quote</span>
+              </div>
+            </a>
+
+            <a href="#" class="link hero__link">
+              <div class="button button__header button__header--second">
+                <span> Life at Badin</span>
+              </div>
+            </a>
+          </div>
+
+          <div class="hero__img-box">
+            <figure>
+              <span>
+                <img src="./assets/images/1-hero-section-2-x.png" alt="">
+              </span>
+            </figure>
+            <!-- <div class="hero__img-content">
           <figure>
             <span class="hero__img">
               <img src="./assets/images/hero-bg.png" alt=""
@@ -38,94 +86,56 @@
             </span>
           </figure>
         </div> -->
-      <div class="header__logo">
-        <img src="./assets/images/1-asset-3.png" class="logo" />
-      </div>
-
-      <div class="navigation">
-        <div class="navigation__button">
-          <span class="navigation__icon">&nbsp;</span>
-        </div>
-
-        <div class="navigation__background">&nbsp;</div>
-        <nav class="sidebar">
-          <ul class="side-nav">
-            <li class="side-nav__item side-nav__item--active">
-              <a href="#"> item1</a>
-            </li>
-            <li class="side-nav__item">
-              <a href="#"> item2</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
-      <article class="hero">
-        <div class="herhttps://raw.githack.com/dragana1611/Badin-Home-Page/master/index.htmlo__text-box">
-          <h1 class="hero__title">Full Cycle Design and Development</h1>
-          <p class="hero__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-            enim ad.
-          </p>
-          <div class="hero__button-box">
-            <a href="#" class="link hero__link">
-              <div class="button button__header button__header--quote">
-                <span> Get a quote</span>
-              </div>
-            </a>
-
-            <a href="#" class="link hero__link">
-              <div class="button button__header button__header--life">
-                <span> Life at Badin</span>
-              </div>
-            </a>
-          </div>
-
-          <div class="hero__img-box">
-            <figure>
-              <span>
-                <img src="./assets/images/1-hero-section-2-x.png" alt="">
-              </span>
-            </figure>
           </div>
         </div>
       </article>
     </div>
-  </header>
+  
 
-  <main>
+  
 
     <!-- section campanies -->
-    <section class="campanies">
+    <section class="campanies">      
       <div class="campanies__container">
-        <div class="campanies__image">
-          <img src="./assets/images/logo-8.png" alt="" />
-        </div>
         <div class="campanies__image">
           <img src="./assets/images/logo-9.png" alt="" />
         </div>
         <div class="campanies__image">
+          <img src="./assets/images/logo-1.png" alt="" />
+        </div>
+        <div class="campanies__image">
           <img src="./assets/images/logo-2.png" alt="" />
-        </div>
+        </div>        
+          <div class="campanies__image">
+            <img src="./assets/images/logo-10.png" alt="" />
+          </div>
         <div class="campanies__image">
-          <img src="./assets/images/logo-7.png" alt="" />
-        </div>
-        <div class="campanies__image">
-          <img src="./assets/images/logo-5.png" alt="" />
-        </div>
-        <div class="campanies__image">
-          <img src="./assets/images/logo-4.png" alt="" />
-        </div>
-        <div class="campanies__image">
-          <img src="./assets/images/logo-6.png" alt="" />
+          <img src="./assets/images/logo-13.png" alt="" />
         </div>
         <div class="campanies__image">
           <img src="./assets/images/logo-3.png" alt="" />
         </div>
         <div class="campanies__image">
-          <img src="./assets/images/logo-1.png" alt="" />
+          <img src="./assets/images/logo-14.png" alt="" />
         </div>
+        <div class="campanies__image">
+          <img src="./assets/images/logo-7.png" alt="" />
+        </div>
+        <div class="campanies__image">
+          <img src="./assets/images/logo-4.png" alt="" />
+        </div>
+        <div class="campanies__image">
+          <img src="./assets/images/logo-12.png" alt="" />
+        </div>
+        <div class="campanies__image">
+          <img src="./assets/images/logo-11.png" alt="" />
+        </div>
+        <div class="campanies__image">
+          <img src="./assets/images/logo-5.png" alt="" />
+        </div>
+        <div class="campanies__image">
+          <img src="./assets/images/logo-15.png" alt="" />
+        </div> 
       </div>
     </section>
 
@@ -133,35 +143,16 @@
     <section class="about">
       <div class="about__container">
         <div class="about__text-box">
-          <h2 class="title-secondary about__title-secondary">How we got here?</h2>
+          <h2 class="title-secondary about__title-secondary">Why Badin?</h2>
           <div class="about__text-content">
             <p class="paragraph-text about__paragraph-text about__paragraph-text--first">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Vivamus at augue eget arcu dictum varius duis at. Neque vitae
-              tempus quam pellentesque. Eu ultrices vitae auctor eu augue ut
-              lectus arcu bibendum. Bibendum neque egestas congue quisque
-              egestas. Cursus in hac habitasse platea dictumst quisque
-              sagittis purus sit. Scelerisque varius morbi enim nunc faucibus
-              a pellentesque sit amet. Volutpat diam ut venenatis tellus in
-              metus. Tellus in hac habitasse platea. Eu scelerisque felis
-              imperdiet proin fermentum leo vel orci. Ultricies mi eget mauris
-              pharetra et ultrices neque.
+              We are a team of experts who will find the right answer and add value to your business. Badin will bring your idea to life, and carefully craft a custom solution according to your needs and goals. Whether you need a research and development hub for creating innovative products, a stable long-term partner to strengthen your teams, or a consultant to help navigate you through your digital transformation, we have you covered.
             </p>
             <p class="paragraph__text about__paragraph-text about__paragraph-text--second">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Vivamus at augue eget arcu dictum varius duis at. Neque vitae
-              tempus quam pellentesque. Eu ultrices vitae auctor eu augue ut
-              lectus arcu bibendum. Bibendum neque egestas congue quisque
-              egestas. Cursus in hac habitasse platea dictumst quisque
-              sagittis purus sit. <br><br>            
-            
-              Scelerisque varius morbi enim nunc faucibus a pellentesque sit
-              amet. Volutpat diam ut venenatis tellus in metus. Tellus in hac
-              habitasse platea. Eu scelerisque felis imperdiet proin fermentum
-              leo vel orci. Ultricies mi eget mauris pharetra et ultrices
-              neque.
+              At the heart of Badin lies a community of people who are continuously improving themselves and those around them by promoting education, knowledge sharing, and contributing to a positive and supportive working environment. 
+            </p>
+            <p class="paragraph__text about__paragraph-text about__paragraph-text--third"> 
+              We empower everyone to be the best version they can be, and strive to create a culture where everyone is heard and appreciated. For us, people are above processes, and the key to our success lies in the trust we place in the people we work with, and in the belief that the same goal connects us all.
             </p>
           </div>
         </div>
@@ -175,101 +166,100 @@
     <section class="services">
       <div class="services__container">
         <div class="services__text-box">
-          <h2 class="title-secondary services__title-secondary">What we do</h2>
+          <h2 class="title-secondary services__title-secondary">What we offer</h2>
           <div class="services__text-content">
-            <p class="paragraph-text-light services__paragraph-text-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Vivamus at augue eget arcu dictum varius duis at.</p>
+            <p class="paragraph-text-light services__paragraph-text-light">Whether you need a research and development hub for crafting innovative products, a stable long-term partner to strengthen your teams, or a consultant to help navigate you through your digital transformation, we have you covered.</p>
           </div>
         </div>
         <a href="#" class="link services__link">
-          <div class="button button__blue">          
-            <span> Read more about services</span>          
-        </div>
+          <button class="button button__blue">          
+            Read more about services          
+        </button>
         </a>
-
-        <div class="card">
-          <h4 class="heading-subtitle card__heading-subtitle">
-            <span class="card__heading-subtitle-span card__heading-subtitle-span--blue">Making big ideas a reality.</span>
-          </h4>
-          <h3 class="heading-title card__heading-title">
-            <span class="card__heading-title-span ">Building software products end-to-end</span>
-          </h3>
-          <div class="card__icons">
-            <span class="card__icon">
-              <img src="./assets/images/terminal.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/cogs.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/crosshairs.png" alt="">
-            </span>
-          </div>
-          <div class="card__image-content">
-            <div class="card__image">
-              <img src="./assets/images/1-making-big-ideas-a-reality-2-x.png" alt="">
+        <div class="card-box">
+          <div class="card">
+            <h4 class="heading-subtitle card__heading-subtitle">
+              <span class="card__heading-subtitle-span card__heading-subtitle-span--blue">Making big ideas a reality.</span>
+            </h4>
+            <h3 class="heading-title card__heading-title">
+              <span class="card__heading-title-span ">Building software products end-to-end</span>
+            </h3>
+            <div class="card__icons">
+              <span class="card__icon">
+                <img class="icon" src="./assets/images/services-icon_2.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_3.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class="icon" src="./assets/images/services-icon.png" alt="">
+              </span>
+            </div>
+            <div class="card__image-content">
+              <div class="card__image">
+                <img class="image-first" src="./assets/images/1-making-big-ideas-a-reality-2-x.png" alt="">
+              </div>
+            </div>
+          </div>        
+          <div class="card">
+            <h4 class="heading-subtitle card__heading-subtitle">
+              <span class="card__heading-subtitle-span card__heading-subtitle-span--red">Enabling talent and expertise</span>
+            </h4>
+            <h3 class="heading-title card__heading-title">
+              <span class="card__heading-title-span ">Augmented teams and experts for great delivery</span>
+            </h3>
+            <div class="card__icons">
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_8.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_9.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_4.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_6.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_5.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_7.png" alt="">
+              </span>
+            </div>
+            <div class="card__image-content">
+              <div class="card__image">
+                <img class="image-second" src="./assets/images/1-enabling-talent-and-expertise-2-x.png" alt="">
+              </div>
             </div>
           </div>
-        </div>
-
-        <div class="card">
-          <h4 class="heading-subtitle card__heading-subtitle">
-            <span class="card__heading-subtitle-span card__heading-subtitle-span--red">Enabling talent and expertise</span>
-          </h4>
-          <h3 class="heading-title card__heading-title">
-            <span class="card__heading-title-span ">Augmented teams and experts for great delivery</span>
-          </h3>
-          <div class="card__icons">
-            <span class="card__icon">
-              <img src="./assets/images/cogs_2.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/diploma.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/award.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/brain-circuit.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/network-wired.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/pencil-ruler.png" alt="">
-            </span>
-          </div>
-          <div class="card__image-content">
-            <div class="card__image">
-              <img src="./assets/images/1-enabling-talent-and-expertise-2-x.png" alt="">
+          
+          <div class="card">
+            <h4 class="heading-subtitle card__heading-subtitle">
+              <span class="card__heading-subtitle-span card__heading-subtitle-span--green">Sharing knowledge and experience</span>
+            </h4>
+            <h3 class="heading-title card__heading-title">
+              <span class="card__heading-title-span ">Consulting on technology, transformation and innovation</span>
+            </h3>
+            <div class="card__icons">
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_12.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_13.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_10.png" alt="">
+              </span>
+              <span class="card__icon">
+                <img class = "icon" src="./assets/images/services-icon_11.png" alt="">
+              </span>
             </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <h4 class="heading-subtitle card__heading-subtitle">
-            <span class="card__heading-subtitle-span card__heading-subtitle-span--green">Sharing knowledge and experience</span>
-          </h4>
-          <h3 class="heading-title card__heading-title">
-            <span class="card__heading-title-span ">Consulting on technology, transformation and innovation</span>
-          </h3>
-          <div class="card__icons">
-            <span class="card__icon">
-              <img src="./assets/images/list-check.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/phone-laptop.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/microchip-2.png" alt="">
-            </span>
-            <span class="card__icon">
-              <img src="./assets/images/graduation-cap.png" alt="">
-            </span>
-          </div>
-          <div class="card__image-content">
-            <div class="card__image">
-              <img src="./assets/images/1-asset-42-2-x.png" alt="">
+            <div class="card__image-content">
+              <div class="card__image">
+                <img class="image-third" src="./assets/images/1-asset-42-2-x.png" alt="">
+              </div>
             </div>
           </div>
         </div>
