--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <nav class="navigation__navbar">
             <ul class="navigation__list" id="nav-menu">
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Home</a>
+                <a href="#" class="navigation__link navigation__link--first">Home</a>
               </li>
               <li class="navigation__item">
                 <a href="#" class="navigation__link">About Us</a>
@@ -73,6 +73,35 @@
               </li>
             </ul>
           </nav>
+          <div class="navigation__contact-wrapper">
+            <div class="media-wrap">
+              <a
+                href="https://www.linkedin.com/company/badin-soft/?originalSubdomain=rs"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
+              <a
+                href="https://www.youtube.com/channel/UCRRAMb1FYTxE2yH90qstr5Q"
+                target="_blank"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+              <a
+                href="https://open.spotify.com/show/7H5AfQ09ujsRNUhMt2Rdgw?si=0a51070ade674e82&amp;nd=1"
+                target="_blank"
+                ><i class="fa-brands fa-spotify"></i
+              ></a>
+              <a href="https://www.instagram.com/badin.soft/" target="_blank">
+                <i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="https://www.facebook.com/badinsoft/" target="_blank"
+                ><i class="fa-brands fa-facebook-square"></i
+              ></a>
+            </div>
+            <div class="contact">
+              <p><a href="#">Nikole Pašića 28, IV floor, Nis, Serbia</a></p>
+              <p><a href="mailto:info@badin.rs">info@badin.rs</a></p>
+            </div>
+          </div>
         </div>
       </div>
       <main>
