--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
           <nav class="navigation__navbar">
             <ul class="navigation__list" id="nav-menu">
               <li class="navigation__item">
-                <a href="#" class="navigation__link navigation__link--first">Home</a>
+                <a href="#" class="navigation__link navigation__link--first"
+                  >Home</a
+                >
               </li>
               <li class="navigation__item">
                 <a href="#" class="navigation__link">About Us</a>
@@ -108,6 +110,14 @@
         <!-- section hero -->
         <section class="hero">
           <div class="hero__container">
+            <div class="aurora-animation">
+              <div class="aurora-animation__wrapper">
+                <div class="animated-circle animated-circle--one"></div>
+                <div class="animated-circle animated-circle--two"></div>
+                <div class="animated-circle animated-circle--three"></div>
+                <div class="animated-circle animated-circle--four"></div>
+              </div>
+            </div>
             <div class="hero-mobile">
               <div class="hero__text-content">
                 <div class="hero__text-box">
@@ -809,19 +819,48 @@
                 </h3>
                 <div class="trustedby__image-box">
                   <div class="trustedby__image">
-                    <img src="./assets/images/logo-9.png" alt="" />
+                    <img src="./assets/images/logo-1.png" alt="" />
                   </div>
                   <div class="trustedby__image">
                     <img src="./assets/images/logo-2.png" alt="" />
                   </div>
                   <div class="trustedby__image">
+                    <img src="./assets/images/logo-3.png" alt="" />
+                  </div>
+                  <div class="trustedby__image">
                     <img src="./assets/images/logo-4.png" alt="" />
                   </div>
+                  <div class="trustedby__image">
+                    <img src="./assets/images/logo-5.png" alt="" />                    
+                  </div>
+                  <div class="trustedby__image">
+                    <img src="./assets/images/logo-6.png" alt="" /></div>
                   <div class="trustedby__image">
                     <img src="./assets/images/logo-7.png" alt="" />
                   </div>
                   <div class="trustedby__image">
-                    <img src="./assets/images/logo-5.png" alt="" />
+                    <img src="./assets/images/logo-8.png" alt="" />
+                  </div>
+                  <div class="trustedby__image">
+                    <img src="./assets/images/logo-9.png" alt="" />
+                  </div>
+                  <div class="trustedby__image">
+                    <img src="./assets/images/logo-10.png" alt="" />
+                  </div>
+                  <div class="trustedby__image">
+                    <img src="./assets/images/logo-11.png" alt="" />
+                  </div>
+                  <div class="trustedby__image">
+                    <img src="./assets/images/logo-12.png" alt="" />
+                  </div>
+                  <div class="trustedby__image">
+                    <img src="./assets/images/logo-13.png" alt="" />
+                  </div>
+                  <div class="trustedby__image">
+                    <img src="./assets/images/logo-14.png" alt="" />
+                  </div>
+                  <div class="trustedby__image">
+                    <img src="./assets/images/logo-15.png" alt="" />
                   </div>
                 </div>
               </div>
