--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         </div>
       </header>
       <div class="navigation">
-        <a href="#"
+        <a href="#" class="navigation__hamurger-link"
           ><button class="navigation__button" id="toggle">
             <span class="navigation__icon" id="hamburger"></span>
           </button>
-          </a>
+        </a>
         <div class="navigation__background" id="overlay">
           <div class="logo__container">
             <a href="https://www.badinsoft.com/" class="navigation__logo">
